--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-alembic==1.11.3
-fastapi==0.101.1
+alembic==1.12.0
+fastapi==0.103.1
 sqlalchemy==2.0.20
 python-dotenv==1.0.0
 pydantic-settings==2.0.3
 pydantic==2.3.0
 psycopg2-binary==2.9.7
 bcrypt==4.0.1
+passlib==1.7.4
+python-jose==3.3.0
+asyncpg==0.28.0
+greenlet==3.0.0
+python-multipart==0.0.6
+pytest==7.4.2
