--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-DATABASE_URL='postgresql://user:password@postgresserver/db'
+DATABASE_URL=postgresql+asyncpg://user:password@postgresserver/db
+USERS_OPEN_REGISTRATION=False
