--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
-alembic==1.12.0
-fastapi==0.103.2
-sqlalchemy==2.0.22
-python-dotenv==1.0.0
+alembic==1.12.1
+fastapi==0.104.1
+sqlalchemy==2.0.23
+python-dotenv
 pydantic-settings==2.0.3
-pydantic==2.4.2
+pydantic
 bcrypt==4.0.1
-passlib==1.7.4
+passlib
 python-jose==3.3.0
-asyncpg==0.28.0
-greenlet==3.0.0
+asyncpg==0.29.0
+greenlet==3.0.1
 python-multipart==0.0.6
-pytest==7.4.2
+pytest==7.4.3
+
+celery
+emails
+tenacity
