--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ fastapi==0.104.1
 sqlalchemy==2.0.23
 python-dotenv
 pydantic-settings==2.0.3
-pydantic
+pydantic[email]
 bcrypt==4.0.1
 passlib
 python-jose==3.3.0
@@ -15,3 +15,4 @@ pytest==7.4.3
 celery
 emails
 tenacity
+uvicorn
