--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,23 +1,25 @@
-events {}
+upstream receipt-back {
+    server 127.0.0.1:5000;
+}
 
-http {
-  server {
-    listen 80;
-
-    location / {
-      proxy_pass http://backend_main:8000;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+server {
+        listen 80 default;
+        root /app/frontend;
+        access_log /var/log/nginx/easypon-access.log;
+        error_log /var/log/nginx/easypon-error.log;
+        client_max_body_size 60M;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        location / {
+            try_files \$uri \$uri/ /index.html;
+        }
+    location /api/ {
+        proxy_pass http://receipt-back;
+        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+        proxy_set_header Host \$http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP \$remote_addr;
+        real_ip_header X-Real-IP;
     }
-
-    location /app {
-      proxy_pass http://frontend:8080;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-    }
-  }
 }
