--- a/docker/Dockerfile_back
+++ b/docker/Dockerfile_back
@@ -1,17 +1,7 @@
-# Use an official Python runtime as a parent image
-FROM python:3.12
-
-# Set the working directory to /app
+FROM python:3.12-alpine
 WORKDIR /app
-
-# Copy the current directory contents into the container at /app
+COPY ./requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 COPY . /app
-
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Make port 5000 available to the world outside this container
-EXPOSE 5000
-
-# Run app.py when the container launches
-CMD ["uvicorn", "main:app", "--host", "127.0.0.1", "--port", "5000"]
+#EXPOSE 5000
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000"]
