--- a/docker/Dockerfile_front
+++ b/docker/Dockerfile_front
@@ -1,28 +1,15 @@
-# Use an official Node.js runtime as a parent image
-FROM node:14
-
-# Set the working directory to /app
+FROM node:latest as build-stage
 WORKDIR /app
-
-# Copy package.json and package-lock.json to the container
 COPY frontend/package*.json ./
-
-# Install app dependencies
 RUN npm install
-
-# Copy the current directory contents into the container at /app
-COPY ./frontend .
-
-# Expose port 8080 to the outside world
-EXPOSE 8000
-
-# Build the Vue.js app
+COPY frontend/ .
+ENV VUE_APP_BACKEND_SERVER_URL=http://localhost:5000
 RUN npm run build
 
-# Serve the app with Nginx
-FROM nginx:stable
-WORKDIR /usr/apps/easypon/front
-COPY frontend/ .
-RUN rm -f  /etc/nginx/conf.d/default.conf
-COPY docker/nginx.conf /etc/nginx/conf.d/receipt.conf
-RUN  sed -i "s/127.0.0.1:5000/backend_main:5000/g" /etc/nginx/conf.d/receipt.conf
+FROM nginx as production-stage
+RUN mkdir /app
+COPY --from=build-stage /app/dist /app
+COPY docker/nginx.conf /etc/nginx/nginx.conf
+#RUN rm -f  /etc/nginx/conf.d/default.conf
+#COPY docker/nginx.conf /etc/nginx/conf.d/receipt.conf
+#RUN  sed -i "s/127.0.0.1:5000/backend_main:5000/g" /etc/nginx/conf.d/receipt.conf
