--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,25 +1,33 @@
-upstream receipt-back {
-    server 127.0.0.1:5000;
+user  nginx;
+worker_processes  1;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+events {
+  worker_connections  1024;
 }
-
-server {
-        listen 80 default;
-        root /app/frontend;
-        access_log /var/log/nginx/easypon-access.log;
-        error_log /var/log/nginx/easypon-error.log;
-        client_max_body_size 60M;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
-        location / {
-            try_files \$uri \$uri/ /index.html;
-        }
-    location /api/ {
-        proxy_pass http://receipt-back;
-        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-        proxy_set_header Host \$http_host;
-        proxy_redirect off;
-        proxy_set_header X-Real-IP \$remote_addr;
-        real_ip_header X-Real-IP;
+http {
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
+  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+  access_log  /var/log/nginx/access.log  main;
+  sendfile        on;
+  keepalive_timeout  65;
+  server {
+    listen       80;
+    server_name  localhost;
+    location / {
+      root   /app;
+      index  index.html;
+      try_files $uri $uri/ /index.html;
     }
+    location /api/ {
+        proxy_pass http://backend_main:5000;
+    }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+      root   /usr/share/nginx/html;
+    }
+  }
 }
