--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -15,7 +15,7 @@ http {
   sendfile        on;
   keepalive_timeout  65;
   server {
-    listen       80;
+    listen 80;
     server_name  localhost;
     location / {
       root   /app;
@@ -23,7 +23,7 @@ http {
       try_files $uri $uri/ /index.html;
     }
     location /api/ {
-        proxy_pass http://backend_main:6000;
+        proxy_pass http://backend_main:6000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
