--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -33,5 +33,10 @@ http {
     location = /50x.html {
       root   /usr/share/nginx/html;
     }
+    location /logs/ {
+      autoindex on;
+      alias /var/log/;
+      allow all;
+    }
   }
 }
