--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -22,12 +22,12 @@ http {
       index  index.html;
       try_files $uri $uri/ /index.html;
     }
-    location /api/ {
-        proxy_pass http://backend_main:6000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    location /api {
+      proxy_pass http://backend_main:6000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
@@ -38,5 +38,11 @@ http {
       alias /var/log/;
       allow all;
     }
+#     location /docs/ {
+#       proxy_pass http://backend_main:6000/docs;
+#     }
+#     location /opennapi.json$ {
+#       proxy_pass http://backend_main:6000/opennapi.json;
+#     }
   }
 }
